@@ -16,23 +16,28 @@ javafx {
     modules = listOf("javafx.controls", "javafx.fxml", "javafx.graphics", "javafx.base")
 }
 
-
 dependencies {
-
+    // OpenCSV для работы с CSV файлами
     implementation("com.opencsv:opencsv:5.9")
+
+    // PostgreSQL JDBC Driver
+    implementation("org.postgresql:postgresql:42.7.3")
+
+    // JavaFX дополнительные библиотеки
     implementation("org.controlsfx:controlsfx:11.2.1")
     implementation("com.dlsc.formsfx:formsfx-core:11.6.0")
     implementation("net.synedra:validatorfx:0.5.0")
     implementation("org.kordamp.ikonli:ikonli-javafx:12.3.1")
     implementation("org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0")
 
+    // Тестирование
     testImplementation(platform("org.junit:junit-bom:5.10.0"))
     testImplementation("org.junit.jupiter:junit-jupiter")
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
 
 application {
-    mainClass.set("org.example._555laba555.HelloApplication")
+    mainClass.set("org.example._555laba555.Main")
 }
 
 tasks.withType<JavaExec> {
@@ -44,8 +49,4 @@ tasks.withType<JavaExec> {
 
 tasks.test {
     useJUnitPlatform()
-    jvmArgs = listOf(
-        "--module-path", sourceSets.main.get().runtimeClasspath.asPath,
-        "--add-modules", "javafx.controls,javafx.fxml,javafx.graphics"
-    )
 }
